# Native-Benchmark-2025

./: LICENSE  LICENSE.md  README.md
docs/: architecture.md  metrics.md  results.md  testing.md
restApiGo/: .env.example  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.ps1  go.sum  main.go
restApiGo/config/: omdb.go
restApiGo/controller/: health.go  internal.go  movie.go
restApiGo/model/: movie.go
restApiGo/monitor/: monitor.sh
restApiGo/repository/: movie_repository.go
restApiGo/service/: movie_service.go
restApiMicronaut/: .gitignore  Dockerfile  aot-jar.properties  dependency-reduced-pom.xml  micronaut-cli.yml  pom.xml
restApiMicronaut/monitor/: monitor-native.sh
restApiMicronaut/src/main/resources/: application.properties  application.properties.example
restApiQuarkus/: .gitignore  Dockerfile  Dockerfile.native  pom.xml  quarkus-native.ps1  quarkus-native.sh  quarkus.sh
restApiQuarkus/k6-tests/: test.js
restApiQuarkus/monitor/: Dockerfile  monitor.sh
restApiQuarkus/src/main/resources/: application.properties  (+1 more)
restApiRust/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
restApiRust/k6-tests/: test.js
restApiRust/monitor/: monitor.sh
restApiRust/src/: main.rs  model.rs  repository.rs  schema.rs  service.rs
restApiRust/src/controllers/: health.rs  internal.rs  mod.rs  movies.rs
restApiSpring/: .gitignore  Dockerfile  Dockerfile.native  docker-compose-native.yml  docker-compose.yml  pom.xml
restApiSpring/k6-tests/: test-native.js  test.js
restApiSpring/monitor/: Dockerfile.native
(+29 files in other folders)
